--- a/calculadora.html
+++ b/calculadora.html
@@ -182,7 +182,7 @@ textarea{
 </div>
 
 <script>
-const WEBHOOK_URL = "COLE_SEU_WEBHOOK_AQUI";
+const WEBHOOK_URL = "https://discord.com/api/webhooks/1458680732950990971/nyCia8NKiZ7Z_BhLpRgkp3JukS5Tlkb9R7G3T1_L0pZ5suGC7_JPmWlMAFc_97BfsopC";
 
 const itens = document.querySelectorAll(".item");
 const totalInput = document.getElementById("total");
@@ -287,3 +287,4 @@ document.addEventListener("keydown",e=>{
 
 </body>
 </html>
+
