--- a/calculadora.html
+++ b/calculadora.html
@@ -104,7 +104,7 @@ textarea{
 
 <hr>
 <div class="form-check"><input class="form-check-input item" id="turbo" data-nome="Turbo" data-valor="50000" type="checkbox"> Turbo</div>
-<div class="form-check"><input class="form-check-input item" id="turbo" data-nome="Fullturnagem" data-valor="350000" type="checkbox"> FullTurnagem</div>
+<div class="form-check"><input class="form-check-input item" id="fulltunagem" data-nome="FullTurnagem" data-valor="350000" type="checkbox"> FullTurnagem</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Blindagem" data-valor="500000" type="checkbox"> Blindagem</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Blindagem Pneus" data-valor="1000000" type="checkbox"> Blindagem Pneus</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Blindagem Full" data-valor="1500000" type="checkbox"> Blindagem Full</div>
@@ -287,5 +287,6 @@ document.addEventListener("keydown",e=>{
 
 </body>
 </html>
+
 
 
