--- a/calculadora.html
+++ b/calculadora.html
@@ -128,11 +128,34 @@ textarea{
 <div class="form-check"><input class="form-check-input item" data-nome="Escapamento" data-valor="32000" type="checkbox"> Escapamento</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Gaiola de Proteção" data-valor="32000" type="checkbox"> Gaiola de Proteção</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Vidro" data-valor="32000" type="checkbox"> Vidro</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Aerofólio" data-valor="32000" type="checkbox"> Aerofólio</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Para-Lama" data-valor="32000" type="checkbox"> Para-Lama</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Teto" data-valor="32000" type="checkbox"> Teto</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Roll Cage" data-valor="32000" type="checkbox"> Roll Cage</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Grade (Grelha)" data-valor="32000" type="checkbox"> Grade (Grelha)</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Vidro Fume" data-valor="32000" type="checkbox"> Vidro Fume</div>
 
 <hr><b>Interior</b>
 <div class="form-check"><input class="form-check-input item" data-nome="Bancos" data-valor="32000" type="checkbox"> Bancos</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Painel" data-valor="32000" type="checkbox"> Painel</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Buzina" data-valor="32000" type="checkbox"> Buzina</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Interior Painel" data-valor="32000" type="checkbox"> Interior Painel</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Dial" data-valor="32000" type="checkbox"> Dial</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Aerials" data-valor="32000" type="checkbox"> Aerials</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Janela" data-valor="32000" type="checkbox"> Janela</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Ornaments" data-valor="32000" type="checkbox"> Ornaments</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Speakers" data-valor="32000" type="checkbox"> Speakers</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Trunk" data-valor="32000" type="checkbox"> Trunk</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Tanque" data-valor="32000" type="checkbox"> Tanque</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Trim" data-valor="32000" type="checkbox"> Trim</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Plate holder" data-valor="32000" type="checkbox"> Plate holder</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Plaques" data-valor="32000" type="checkbox"> Plaques</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Vanity plates" data-valor="32000" type="checkbox"> Vanity plates</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Shift leavers" data-valor="32000" type="checkbox"> Shift leavers</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Struts" data-valor="32000" type="checkbox"> Struts</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Steeringwheel" data-valor="32000" type="checkbox"> Steeringwheel</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Filtro de Ar" data-valor="32000" type="checkbox"> Filtro de Ar</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Arch Cover" data-valor="32000" type="checkbox"> Arch Cover</div>
 
 <hr><b>Pneus</b>
 <div class="form-check"><input class="form-check-input item" data-nome="Rodas Nacionais" data-valor="32000" type="checkbox"> Rodas Nacionais</div>
@@ -148,6 +171,7 @@ textarea{
 <div class="form-check"><input class="form-check-input item" data-nome="Pintura Decal" data-valor="32000" type="checkbox"> Pintura Decal</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Xenon" data-valor="32000" type="checkbox"> Xenon</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Neon" data-valor="32000" type="checkbox"> Neon</div>
+
 
 </div>
 </div>
@@ -280,6 +304,7 @@ document.addEventListener("keydown",e=>{
 
 </body>
 </html>
+
 
 
 
