--- a/certificado.html
+++ b/certificado.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Gerador de Certificado - Fusion Customs</title>
-<link rel="icon" type="image/x-icon" href="https://imgur.com/WWZV5uc.png">
+<title>Gerador de Certificado - Central Race</title>
+<link rel="icon" type="image/x-icon" href="https://imgur.com/0iskhD3.png">
 
 <!-- Bootstrap 5 -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -41,8 +41,8 @@ body {
 <header class="topbar">
   <div class="container d-flex justify-content-between align-items-center">
     <div class="d-flex align-items-center gap-3">
-      <img src="https://imgur.com/UX64xoQ.png" style="height:60px;border-radius:8px" draggable="false">
-      <div class="logo">Fusion Customs</div>
+      <img src="https://imgur.com/0iskhD3.png" style="height:60px;border-radius:8px" draggable="false">
+      <div class="logo">Central Race</div>
     </div>
     <nav class="d-none d-md-flex align-items-center nav-links">
       <a href="index.html">Início</a>
@@ -128,7 +128,7 @@ document.getElementById('certForm').addEventListener('submit', async function(e)
     doc.setFont('times','normal');
     doc.setFontSize(18);
     doc.text(`concluiu o curso de ${curso},`,148.5,135,{align:'center'});
-    doc.text('ministrado pela empresa Fusion Customs.',148.5,148,{align:'center'});
+    doc.text('ministrado pela empresa Central Race.',148.5,148,{align:'center'});
 
     doc.line(90,165,207,165);
     doc.setFont('times','italic');
@@ -151,7 +151,7 @@ function enviarParaDiscord(pdfDoc, nome, instrutor, curso){
 
   const descricao = 
 `🎉 **Parabéns! Você concluiu o curso com sucesso.**  
-🏢 **Empresa:** Fusion Customs -  Mecânica  
+🏢 **Empresa:** Central Race -  Mecânica  
 🎓 **Curso:** ${curso}  
 👤 **Aluno:** ${nome}  
 👨‍🏫 **Instrutor:** ${instrutor}  
@@ -172,6 +172,7 @@ function enviarParaDiscord(pdfDoc, nome, instrutor, curso){
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
