--- a/funcionarios.html
+++ b/funcionarios.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Fusion Customs - Funcionarios</title>
-<link rel="icon" type="image/x-icon" href="https://imgur.com/WWZV5uc.png">
+<title>Central Race - Funcionarios</title>
+<link rel="icon" type="image/x-icon" href="https://imgur.com/0iskhD3.png">
 
 <!-- Bootstrap 5 -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -108,8 +108,8 @@ body {
 <header class="topbar">
   <div class="container d-flex justify-content-between align-items-center">
     <div class="d-flex align-items-center gap-3">
-      <img src="https://imgur.com/UX64xoQ.png" alt="Logo" style="height:90px; border-radius:8px;">
-      <div class="logo">Fusion Customs</div>
+      <img src="https://imgur.com/0iskhD3.png" alt="Logo" style="height:90px; border-radius:8px;">
+      <div class="logo">Central Race</div>
     </div>
     <nav class="d-none d-md-flex align-items-center nav-links">
       <a href="index.html">Início</a>
@@ -147,7 +147,7 @@ body {
         <img src="https://i.imgur.com/Fpg3OQK.png" class="card-img-top" alt="Vaga aberta">
         <div class="card-body text-center">
           <h5 class="mb-0">Vaga aberta</h5>
-          <p class="small text-muted">FUSION CUSTOMS</p>
+          <p class="small text-muted">Central Race</p>
         </div>
       </div>
     </div>
@@ -156,7 +156,7 @@ body {
         <img src="https://i.imgur.com/Fpg3OQK.png" class="card-img-top" alt="Vaga aberta">
         <div class="card-body text-center">
           <h5 class="mb-0">Vaga aberta</h5>
-          <p class="small text-muted">FUSION CUSTOMS</p>
+          <p class="small text-muted">Central Race</p>
         </div>
       </div>
     </div>
@@ -170,7 +170,7 @@ body {
         <img src="https://i.imgur.com/Fpg3OQK.png" class="card-img-top">
         <div class="card-body text-center">
           <h5 class="mb-0">Vaga aberta</h5>
-          <p class="small text-muted">FUSION CUSTOMS</p>
+          <p class="small text-muted">Central Race</p>
         </div>
       </div>
     </div>
@@ -179,7 +179,7 @@ body {
         <img src="https://i.imgur.com/Fpg3OQK.png" class="card-img-top">
         <div class="card-body text-center">
           <h5 class="mb-0">Vaga aberta</h5>
-          <p class="small text-muted">FUSION CUSTOMS</p>
+          <p class="small text-muted">Central Race</p>
         </div>
       </div>
     </div>
@@ -188,7 +188,7 @@ body {
         <img src="https://i.imgur.com/Fpg3OQK.png" class="card-img-top">
         <div class="card-body text-center">
           <h5 class="mb-0">João Britto</h5>
-          <p class="small text-muted">FUSION CUSTOMSS</p>
+          <p class="small text-muted">Central RaceS</p>
         </div>
       </div>
     </div>
@@ -218,6 +218,7 @@ document.addEventListener('dragstart', e => e.preventDefault());
 
 </body>
 </html>
+
 
 
 
