--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Mecânica - Fusion Customs</title>
-<link rel="icon" type="image/x-icon" href="https://imgur.com/WWZV5uc.png">
+<title>Mecânica - Central Race</title>
+<link rel="icon" type="image/x-icon" href="https://imgur.com/0iskhD3.png">
 
 <!-- Bootstrap 5 -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -131,8 +131,8 @@ body {
 <header class="topbar">
 <div class="container d-flex justify-content-between align-items-center flex-wrap">
     <div class="d-flex align-items-center gap-3">
-        <img src="https://imgur.com/UX64xoQ.png" alt="Logo" style="height:90px; width:auto; border-radius:8px;" draggable="false">
-        <div class="logo">FUSION CUSTOMS</div>
+        <img src="https://imgur.com/0iskhD3.png" alt="Logo" style="height:90px; width:auto; border-radius:8px;" draggable="false">
+        <div class="logo">Central Race</div>
     </div>
 
     <!-- Hamburger mobile -->
@@ -246,11 +246,11 @@ body {
   <h2 class="mb-4 text-center">Sobre Nós</h2>
   <div class="row align-items-center">
     <div class="col-md-6 text-center">
-      <img src="https://imgur.com/UX64xoQ.png" alt="FUSION CUSTOMS Logo" draggable="false">
+      <img src="https://imgur.com/UX64xoQ.png" alt="Central Race Logo" draggable="false">
     </div>
     <div class="col-md-6">
       <p>
-        A Fusion Customs, localizada na Central RP, oferece serviços automotivos de qualidade, incluindo tunagem, pintura e conserto de veículos. Com mais de 5 anos de experiência no mercado, investimos em tecnologia e contamos com profissionais altamente qualificados, garantindo segurança e excelência em cada serviço. Nosso ambiente familiar proporciona boa sintonia entre clientes, colaboradores e fornecedores, sempre seguindo rigorosos padrões de qualidade.
+        A Central Race, localizada na Central RP, oferece serviços automotivos de qualidade, incluindo tunagem, pintura e conserto de veículos. Com mais de 5 anos de experiência no mercado, investimos em tecnologia e contamos com profissionais altamente qualificados, garantindo segurança e excelência em cada serviço. Nosso ambiente familiar proporciona boa sintonia entre clientes, colaboradores e fornecedores, sempre seguindo rigorosos padrões de qualidade.
       </p>
     </div>
   </div>
@@ -284,5 +284,6 @@ toggler.addEventListener('click', () => mobileMenu.classList.toggle('show'));
 
 </body>
 </html>
+
 
 
