--- a/reparo.html
+++ b/reparo.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Fusion Customs - RELATÓRIO DO REPARO - MECÂNICA</title>
+<title>Central Race - RELATÓRIO DO REPARO - MECÂNICA</title>
 
-<link rel="icon" type="image/x-icon" href="https://imgur.com/WWZV5uc.png">
+<link rel="icon" type="image/x-icon" href="https://imgur.com/0iskhD3.png">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://kit.fontawesome.com/a2d9b1d7a1.js" crossorigin="anonymous"></script>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -73,8 +73,8 @@ user-select:none;
 <header class="topbar">
 <div class="container d-flex justify-content-between align-items-center">
 <div class="d-flex align-items-center gap-3">
-<img src="https://imgur.com/UX64xoQ.png" style="height:70px;border-radius:8px">
-<div class="logo">Fusion Customs</div>
+<img src="https://imgur.com/0iskhD3.png" style="height:70px;border-radius:8px">
+<div class="logo">Central Race</div>
 </div>
 
 <nav class="d-none d-md-flex align-items-center nav-links">
@@ -156,7 +156,7 @@ function gerarRelatorio(){
   }
 
   let total = 0;
-  let texto = "🛠️ RELATÓRIO FUSION CUSTOMS 🛠️\n\n";
+  let texto = "🛠️ RELATÓRIO Central Race 🛠️\n\n";
 
   itens.forEach(i => {
     if(i.id !== "parceria") total += valores[i.value];
@@ -214,6 +214,7 @@ function limpar(){
 
 </body>
 </html>
+
 
 
 
