--- a/shop.html
+++ b/shop.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Fusion Customs - Loja</title>
-<link rel="icon" type="image/x-icon" href="https://imgur.com/WWZV5uc.png">
+<title>Central Race - Loja</title>
+<link rel="icon" type="image/x-icon" href="https://imgur.com/0iskhD3.png">
 
 <!-- Proteção Anti-Cópia / Anti-Inspecionar -->
 <script>
@@ -99,10 +99,10 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
 <div class="container d-flex justify-content-between align-items-center">
     <div class="d-flex align-items-center gap-3">
         <div class="logo-wrapper">
-          <img src="https://imgur.com/UX64xoQ.png" alt="Logo" style="height:90px; width:auto; border-radius:8px;">
+          <img src="https://imgur.com/0iskhD3.png" alt="Logo" style="height:90px; width:auto; border-radius:8px;">
           <div class="overlay"></div>
         </div>
-        <div class="logo">Fusion Customs</div>
+        <div class="logo">Central Race</div>
     </div>
     <nav class="d-none d-md-flex align-items-center nav-links">
         <a href="index.html">Início</a>
@@ -230,6 +230,7 @@ document.getElementById('year').textContent = new Date().getFullYear();
 
 </body>
 </html>
+
 
 
 
