--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ body {
     </div>
     <div class="col-sm-4 d-flex justify-content-center">
       <div class="card card-service" data-bs-toggle="modal" data-bs-target="#TunningModal">
-        <img src="https://imgur.com/xzmK5Gu.png" class="card-img-top" alt="Tunning de Veículos" draggable="false">
+        <img src="https://imgur.com/NnaqrpG.png" class="card-img-top" alt="Tunning de Veículos" draggable="false">
         <div class="card-body text-center">
           <p class="card-text">Tunning de Veículos</p>
         </div>
@@ -246,7 +246,7 @@ body {
   <h2 class="mb-4 text-center">Sobre Nós</h2>
   <div class="row align-items-center">
     <div class="col-md-6 text-center">
-      <img src="https://imgur.com/UX64xoQ.png" alt="Central Race Logo" draggable="false">
+      <img src="https://imgur.com/0iskhD3.png" alt="Central Race Logo" draggable="false">
     </div>
     <div class="col-md-6">
       <p>
@@ -284,6 +284,7 @@ toggler.addEventListener('click', () => mobileMenu.classList.toggle('show'));
 
 </body>
 </html>
+
 
 
 
