--- a/funcionarios.html
+++ b/funcionarios.html
@@ -3,16 +3,11 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Central Race - Funcionarios</title>
+<title>Central Race - Funcionários</title>
 <link rel="icon" type="image/x-icon" href="https://imgur.com/0iskhD3.png">
 
-<!-- Bootstrap 5 -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
-<!-- Font Awesome -->
 <script src="https://kit.fontawesome.com/a2d9b1d7a1.js" crossorigin="anonymous"></script>
-
-<!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
@@ -21,67 +16,37 @@ body {
   background: #f7f7f7;
   color: #222;
 }
-
 .topbar {
   background: #2b2f33;
   color: #fff;
   padding: 12px 0;
 }
-
 .logo {
   font-weight:700;
   letter-spacing:0.6px;
   color:#fff;
 }
-
 .nav-links a {
   color:#fff;
   text-decoration:none;
   margin-left:18px;
   font-weight:600;
 }
-
 .nav-links a:hover {
   color:#cfcfcf;
 }
-
-.discord-btn {
-  display:inline-flex;
-  align-items:center;
-  justify-content:center;
-  gap:8px;
-  padding:8px 16px;
-  border-radius:12px;
-  background:linear-gradient(135deg,#7289da,#99a9f0);
-  color:#fff;
-  font-weight:700;
-  text-decoration:none;
-  transition:0.25s;
-  font-size:0.9rem;
-}
-
-.discord-btn:hover {
-  background:linear-gradient(135deg,#5b6ea1,#7f88d0);
-  transform:translateY(-2px);
-}
-
 .card-employee {
   border-radius: 16px;
   overflow: hidden;
-  margin-bottom: 20px;
-  cursor: pointer;
   transition: 0.3s;
 }
-
 .card-employee:hover {
   transform: translateY(-3px);
 }
-
 .card-employee img {
   height: 180px;
   object-fit: cover;
 }
-
 .subtitulo {
   font-weight:700;
   background:#e0e0e0;
@@ -89,14 +54,7 @@ body {
   padding:5px 0;
   margin-bottom:10px;
 }
-
-/* 🔥 CENTRALIZA AUTOMATICAMENTE QUANDO TIVER SÓ 1 CARD */
 .row.single-card {
-  justify-content: center;
-}
-
-.row.single-card .col-lg-3 {
-  display: flex;
   justify-content: center;
 }
 </style>
@@ -104,95 +62,66 @@ body {
 
 <body>
 
-<!-- Topbar -->
 <header class="topbar">
   <div class="container d-flex justify-content-between align-items-center">
     <div class="d-flex align-items-center gap-3">
-      <img src="https://imgur.com/0iskhD3.png" alt="Logo" style="height:90px; border-radius:8px;">
+      <img src="https://imgur.com/0iskhD3.png" style="height:90px;border-radius:8px;">
       <div class="logo">Central Race</div>
     </div>
-    <nav class="d-none d-md-flex align-items-center nav-links">
+    <nav class="d-none d-md-flex nav-links">
       <a href="index.html">Início</a>
       <a href="tabela.html">Preços</a>
       <a href="funcionarios.html">Funcionários</a>
-      </a>
     </nav>
   </div>
 </header>
 
 <main class="container my-5">
+<section>
 
-<section class="mb-5">
-  <h2 class="mb-4 text-center">Nossa Equipe</h2>
+<h2 class="mb-4 text-center">Nossa Equipe</h2>
 
-  <!-- RESPONSÁVEL MECÂNICA -->
-  <div class="subtitulo">RESPONSÁVEL MECÂNICA</div>
-  <div class="row single-card mb-4">
-    <div class="col-lg-3 col-md-6 mb-4">
-      <div class="card card-employee">
-        <img src="https://imgur.com/m3IO5MD.png" class="card-img-top" alt="Carol Amud">
-        <div class="card-body text-center">
-          <h5 class="mb-0">DRK</h5>
-          <p class="small text-muted">RESP MECÂNICA</p>
-        </div>
+<!-- RESPONSÁVEL MECÂNICA -->
+<div class="subtitulo">RESPONSÁVEL MECÂNICA</div>
+<div class="row single-card mb-4">
+  <div class="col-lg-3 col-md-6">
+    <div class="card card-employee">
+      <img src="https://res.cloudinary.com/dfyiwxdhn/image/upload/f_auto,q_auto,w_400,h_250,c_fill/drk.jpg">
+      <div class="card-body text-center">
+        <h5 class="mb-0">DRK</h5>
+        <p class="small text-muted">RESP MECÂNICA</p>
       </div>
     </div>
   </div>
+</div>
 
-  <!-- LIDER -->
-  <div class="subtitulo">LÍDER</div>
-  <div class="row justify-content-center mb-4">
-    <div class="col-lg-3 col-md-6 mb-4">
-      <div class="card card-employee">
-        <img src="https://i.imgur.com/Fpg3OQK.png" class="card-img-top" alt="Vaga aberta">
-        <div class="card-body text-center">
-          <h5 class="mb-0">Vaga aberta</h5>
-          <p class="small text-muted">Central Race</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-3 col-md-6 mb-4">
-      <div class="card card-employee">
-        <img src="https://i.imgur.com/Fpg3OQK.png" class="card-img-top" alt="Vaga aberta">
-        <div class="card-body text-center">
-          <h5 class="mb-0">Vaga aberta</h5>
-          <p class="small text-muted">Central Race</p>
-        </div>
+<!-- LÍDER -->
+<div class="subtitulo">LÍDER</div>
+<div class="row justify-content-center mb-4">
+  <div class="col-lg-3 col-md-6 mb-4">
+    <div class="card card-employee">
+      <img src="https://res.cloudinary.com/dfyiwxdhn/image/upload/f_auto,q_auto,w_400,h_250,c_fill/placeholder.jpg">
+      <div class="card-body text-center">
+        <h5 class="mb-0">Vaga aberta</h5>
+        <p class="small text-muted">Central Race</p>
       </div>
     </div>
   </div>
+</div>
 
-  <!-- GERENTE -->
-  <div class="subtitulo">GERENTE</div>
-  <div class="row justify-content-center mb-4">
-    <div class="col-lg-3 col-md-6 mb-4">
-      <div class="card card-employee">
-        <img src="https://i.imgur.com/Fpg3OQK.png" class="card-img-top">
-        <div class="card-body text-center">
-          <h5 class="mb-0">Vaga aberta</h5>
-          <p class="small text-muted">Central Race</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-3 col-md-6 mb-4">
-      <div class="card card-employee">
-        <img src="https://i.imgur.com/Fpg3OQK.png" class="card-img-top">
-        <div class="card-body text-center">
-          <h5 class="mb-0">Vaga aberta</h5>
-          <p class="small text-muted">Central Race</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-3 col-md-6 mb-4">
-      <div class="card card-employee">
-        <img src="https://i.imgur.com/Fpg3OQK.png" class="card-img-top">
-        <div class="card-body text-center">
-          <h5 class="mb-0">João Britto</h5>
-          <p class="small text-muted">Central RaceS</p>
-        </div>
+<!-- GERENTE -->
+<div class="subtitulo">GERENTE</div>
+<div class="row justify-content-center mb-4">
+  <div class="col-lg-3 col-md-6 mb-4">
+    <div class="card card-employee">
+      <img src="https://res.cloudinary.com/dfyiwxdhn/image/upload/f_auto,q_auto,w_400,h_250,c_fill/placeholder.jpg">
+      <div class="card-body text-center">
+        <h5 class="mb-0">João Britto</h5>
+        <p class="small text-muted">Central Race</p>
       </div>
     </div>
   </div>
+</div>
 
 </section>
 </main>
@@ -201,27 +130,9 @@ body {
 © <span id="year"></span> João Britto - Todos os direitos reservados
 </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script>
 document.getElementById('year').textContent = new Date().getFullYear();
-
-// Bloqueios
-document.addEventListener('keydown', function(e) {
-  if (e.key === 'F12') e.preventDefault();
-  if (e.ctrlKey && e.shiftKey && ['I','C','J'].includes(e.key.toUpperCase())) e.preventDefault();
-  if (e.ctrlKey && e.key.toUpperCase() === 'U') e.preventDefault();
-});
-document.addEventListener('contextmenu', e => e.preventDefault());
-document.addEventListener('selectstart', e => e.preventDefault());
-document.addEventListener('dragstart', e => e.preventDefault());
 </script>
 
 </body>
 </html>
-
-
-
-
-
-
-
