--- a/registrof.html
+++ b/registrof.html
@@ -7,18 +7,18 @@
 
 <style>
 body {
-  font-family: Inter, Arial, sans-serif;
+  font-family: Arial, sans-serif;
   background:#f2f2f2;
   padding:30px;
 }
 .admin {
   background:#fff;
-  max-width:480px;
+  max-width:420px;
   margin:auto;
   padding:25px;
   border-radius:14px;
 }
-input, button {
+input, button, select {
   width:100%;
   padding:12px;
   margin-top:12px;
@@ -28,16 +28,14 @@ input, button {
 button {
   background:#2b2f33;
   color:#fff;
-  border:none;
   font-weight:700;
+  border:none;
   cursor:pointer;
 }
 textarea {
   width:100%;
-  height:180px;
+  height:140px;
   margin-top:15px;
-  border-radius:10px;
-  padding:10px;
 }
 </style>
 </head>
@@ -45,15 +43,21 @@ textarea {
 <body>
 
 <div class="admin">
-  <h2>Adicionar Funcionário</h2>
+  <h2>Atualizar Foto do Funcionário</h2>
 
-  <input type="text" id="nome" placeholder="Nome">
-  <input type="text" id="cargo" placeholder="Cargo">
+  <select id="cargo">
+    <option value="">Selecione o cargo</option>
+    <option value="resp-mec">Responsável Mecânica</option>
+    <option value="lider">Líder</option>
+    <option value="gerente">Gerente</option>
+  </select>
+
+  <input type="number" id="posicao" placeholder="Posição (ex: 1, 2, 3)">
   <input type="file" id="imagem" accept="image/*">
 
-  <button onclick="enviar()">Upload e gerar card</button>
+  <button onclick="enviar()">Atualizar imagem</button>
 
-  <textarea id="saida" placeholder="O card HTML aparecerá aqui"></textarea>
+  <textarea id="saida" placeholder="Cole isso no funcionarios.html"></textarea>
 </div>
 
 <script>
@@ -61,12 +65,12 @@ const CLOUD_NAME = "dfyiwxdhn";
 const UPLOAD_PRESET = "funcionarios";
 
 async function enviar() {
-  const nome = document.getElementById("nome").value.trim();
-  const cargo = document.getElementById("cargo").value.trim();
+  const cargo = document.getElementById("cargo").value;
+  const posicao = document.getElementById("posicao").value;
   const imagem = document.getElementById("imagem").files[0];
 
-  if (!nome || !cargo || !imagem) {
-    alert("Preencha todos os campos");
+  if (!cargo || !posicao || !imagem) {
+    alert("Preencha tudo");
     return;
   }
 
@@ -81,18 +85,12 @@ async function enviar() {
 
   const data = await res.json();
 
-  const cardHTML = `
-<div class="col-lg-3 col-md-6 mb-4">
-  <div class="card card-employee">
-    <img src="${data.secure_url}" class="card-img-top">
-    <div class="card-body text-center">
-      <h5 class="mb-0">${nome}</h5>
-      <p class="small text-muted">${cargo}</p>
-    </div>
-  </div>
-</div>`;
+  const comando = `
+<script>
+document.getElementById("${cargo}-${posicao}").src = "${data.secure_url}";
+</script>`;
 
-  document.getElementById("saida").value = cardHTML;
+  document.getElementById("saida").value = comando;
 }
 </script>
 
