--- a/registrof.html
+++ b/registrof.html
@@ -75,12 +75,12 @@ button:hover {
   <div class="container d-flex justify-content-between align-items-center">
     <div class="d-flex align-items-center gap-3">
       <img src="https://imgur.com/0iskhD3.png" style="height:55px;border-radius:8px;">
-      <div class="logo">Central Race • Admin</div>
+      <div class="logo">Central Race</div>
     </div>
     <nav class="d-none d-md-flex nav-links">
       <a href="index.html">Início</a>
+      <a href="tabela.html">Preços</a>
       <a href="funcionarios.html">Funcionários</a>
-      <a href="admin.html">Admin</a>
     </nav>
   </div>
 </header>
@@ -141,3 +141,4 @@ async function atualizar() {
 
 </body>
 </html>
+
