--- a/funcionarios.html
+++ b/funcionarios.html
@@ -4,153 +4,190 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Central Race - Funcionários</title>
-<link rel="icon" type="image/x-icon" href="https://imgur.com/0iskhD3.png">
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://kit.fontawesome.com/a2d9b1d7a1.js" crossorigin="anonymous"></script>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
 <style>
 body {
-  font-family: "Inter", system-ui, sans-serif;
-  background: #f7f7f7;
-  color: #222;
+  font-family: Inter, sans-serif;
+  background:#f4f4f4;
 }
+
 .topbar {
-  background: #2b2f33;
-  color: #fff;
-  padding: 12px 0;
+  background:#2b2f33;
+  color:#fff;
+  padding:12px;
 }
+
 .logo {
   font-weight:700;
-  letter-spacing:0.6px;
-  color:#fff;
+  font-size:20px;
 }
-.nav-links a {
-  color:#fff;
-  text-decoration:none;
-  margin-left:18px;
-  font-weight:600;
-}
-.nav-links a:hover {
-  color:#cfcfcf;
-}
+
 .card-employee {
-  border-radius: 16px;
-  overflow: hidden;
-  transition: 0.3s;
+  border-radius:16px;
+  overflow:hidden;
+  transition:.3s;
 }
 .card-employee:hover {
-  transform: translateY(-3px);
+  transform:translateY(-4px);
 }
 .card-employee img {
-  height: 180px;
-  object-fit: cover;
+  height:180px;
+  object-fit:cover;
 }
+
 .subtitulo {
-  font-weight:700;
-  background:#e0e0e0;
+  background:#ddd;
   text-align:center;
-  padding:5px 0;
-  margin-bottom:10px;
+  font-weight:700;
+  padding:6px;
+  margin-bottom:15px;
 }
-.row.single-card {
-  justify-content: center;
+
+/* MENU ADMIN */
+.admin-btn {
+  position:fixed;
+  right:20px;
+  bottom:20px;
+  z-index:999;
+}
+
+.admin-menu {
+  position:fixed;
+  right:-320px;
+  top:0;
+  width:320px;
+  height:100%;
+  background:#fff;
+  box-shadow:-4px 0 20px rgba(0,0,0,.2);
+  padding:20px;
+  transition:.3s;
+  z-index:1000;
+}
+
+.admin-menu.open {
+  right:0;
 }
 </style>
 </head>
 
 <body>
 
-<header class="topbar">
-  <div class="container d-flex justify-content-between align-items-center">
-    <div class="d-flex align-items-center gap-3">
-      <img src="https://imgur.com/0iskhD3.png" style="height:90px;border-radius:8px;">
-      <div class="logo">Central Race</div>
-    </div>
-    <nav class="d-none d-md-flex nav-links">
-      <a href="index.html">Início</a>
-      <a href="tabela.html">Preços</a>
-      <a href="funcionarios.html">Funcionários</a>
-    </nav>
-  </div>
+<header class="topbar d-flex justify-content-between align-items-center px-4">
+  <div class="logo">Central Race</div>
 </header>
 
 <main class="container my-5">
-<section>
 
-<h2 class="mb-4 text-center">Nossa Equipe</h2>
+<h2 class="text-center mb-4">Nossa Equipe</h2>
 
-<!-- RESPONSÁVEL MECÂNICA -->
 <div class="subtitulo">RESPONSÁVEL MECÂNICA</div>
-<div class="row single-card mb-4">
-  <div class="col-lg-3 col-md-6">
+<div class="row justify-content-center mb-4">
+  <div class="col-md-3">
     <div class="card card-employee">
-      <img
-        id="resp-mec-1"
-        src="https://res.cloudinary.com/dfyiwxdhn/image/upload/f_auto,q_auto,w_400,h_250,c_fill/drk.jpg"
-        class="card-img-top"
-      >
+      <img id="resp-mec-1" src="https://via.placeholder.com/400x250">
       <div class="card-body text-center">
-        <h5 class="mb-0">DRK</h5>
-        <p class="small text-muted">RESP MECÂNICA</p>
+        <h5>Vaga aberta</h5>
+        <p class="small text-muted">RESP. MECÂNICA</p>
       </div>
     </div>
   </div>
 </div>
 
-<!-- LÍDER -->
 <div class="subtitulo">LÍDER</div>
 <div class="row justify-content-center mb-4">
-  <div class="col-lg-3 col-md-6 mb-4">
+  <div class="col-md-3">
     <div class="card card-employee">
-      <img
-        id="lider-1"
-        src="https://res.cloudinary.com/dfyiwxdhn/image/upload/f_auto,q_auto,w_400,h_250,c_fill/placeholder.jpg"
-        class="card-img-top"
-      >
+      <img id="lider-1" src="https://via.placeholder.com/400x250">
       <div class="card-body text-center">
-        <h5 class="mb-0">Vaga aberta</h5>
-        <p class="small text-muted">Central Race</p>
+        <h5>Vaga aberta</h5>
+        <p class="small text-muted">LÍDER</p>
       </div>
     </div>
   </div>
 </div>
 
-<!-- GERENTE -->
 <div class="subtitulo">GERENTE</div>
 <div class="row justify-content-center mb-4">
-  <div class="col-lg-3 col-md-6 mb-4">
+  <div class="col-md-3">
     <div class="card card-employee">
-      <img
-        id="gerente-1"
-        src="https://res.cloudinary.com/dfyiwxdhn/image/upload/f_auto,q_auto,w_400,h_250,c_fill/placeholder.jpg"
-        class="card-img-top"
-      >
+      <img id="gerente-1" src="https://via.placeholder.com/400x250">
       <div class="card-body text-center">
-        <h5 class="mb-0">João Britto</h5>
-        <p class="small text-muted">Central Race</p>
+        <h5>Vaga aberta</h5>
+        <p class="small text-muted">GERENTE</p>
       </div>
     </div>
   </div>
 </div>
 
-</section>
 </main>
 
-<footer class="text-center py-4 text-muted">
-© <span id="year"></span> João Britto - Todos os direitos reservados
-</footer>
+<!-- BOTÃO ADMIN -->
+<button class="btn btn-dark admin-btn" onclick="toggleMenu()">
+  Admin
+</button>
 
-<!-- SCRIPT AUTOMÁTICO DAS IMAGENS -->
+<!-- MENU ADMIN -->
+<div class="admin-menu" id="adminMenu">
+  <h5>Menu Admin</h5>
+  <hr>
+
+  <label>Cargo</label>
+  <select id="cargo" class="form-select mb-2">
+    <option value="resp-mec-1">Responsável Mecânica</option>
+    <option value="lider-1">Líder</option>
+    <option value="gerente-1">Gerente</option>
+  </select>
+
+  <label>Nome</label>
+  <input id="nome" class="form-control mb-2">
+
+  <label>Foto (URL)</label>
+  <input id="foto" class="form-control mb-3">
+
+  <button class="btn btn-primary w-100 mb-2" onclick="salvarPerfil()">Salvar</button>
+  <button class="btn btn-danger w-100" onclick="limparPerfil()">Remover Perfil</button>
+</div>
+
 <script>
-document.getElementById('year').textContent = new Date().getFullYear();
+function toggleMenu() {
+  document.getElementById("adminMenu").classList.toggle("open");
+}
 
-const fotos = JSON.parse(localStorage.getItem("fotosFuncionarios") || "{}");
+function salvarPerfil() {
+  const cargo = cargoEl.value;
+  const nome = nomeEl.value;
+  const foto = fotoEl.value;
 
-Object.keys(fotos).forEach(id => {
+  const dados = JSON.parse(localStorage.getItem("perfis") || "{}");
+  dados[cargo] = { nome, foto };
+
+  localStorage.setItem("perfis", JSON.stringify(dados));
+  location.reload();
+}
+
+function limparPerfil() {
+  const cargo = cargoEl.value;
+  const dados = JSON.parse(localStorage.getItem("perfis") || "{}");
+  delete dados[cargo];
+  localStorage.setItem("perfis", JSON.stringify(dados));
+  location.reload();
+}
+
+const cargoEl = document.getElementById("cargo");
+const nomeEl = document.getElementById("nome");
+const fotoEl = document.getElementById("foto");
+
+const perfis = JSON.parse(localStorage.getItem("perfis") || "{}");
+
+Object.keys(perfis).forEach(id => {
   const img = document.getElementById(id);
-  if (img) img.src = fotos[id];
+  if (img) {
+    img.src = perfis[id].foto;
+    img.closest(".card").querySelector("h5").textContent = perfis[id].nome;
+  }
 });
 </script>
 
