--- a/funcionarios.html
+++ b/funcionarios.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Central Race - Funcionários</title>
 
+<link rel="icon" href="https://imgur.com/0iskhD3.png">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
@@ -14,15 +15,23 @@ body {
   background:#f4f4f4;
 }
 
-.topbar {
+.navbar {
   background:#2b2f33;
-  color:#fff;
-  padding:12px;
 }
 
-.logo {
+.navbar-brand {
   font-weight:700;
-  font-size:20px;
+  color:#fff;
+}
+
+.navbar-brand img {
+  height:45px;
+  margin-right:10px;
+}
+
+.nav-link {
+  color:#fff !important;
+  font-weight:600;
 }
 
 .card-employee {
@@ -46,19 +55,12 @@ body {
   margin-bottom:15px;
 }
 
-/* MENU ADMIN */
-.admin-btn {
-  position:fixed;
-  right:20px;
-  bottom:20px;
-  z-index:999;
-}
-
+/* ADMIN */
 .admin-menu {
   position:fixed;
-  right:-320px;
+  right:-340px;
   top:0;
-  width:320px;
+  width:340px;
   height:100%;
   background:#fff;
   box-shadow:-4px 0 20px rgba(0,0,0,.2);
@@ -75,27 +77,50 @@ body {
 
 <body>
 
-<header class="topbar d-flex justify-content-between align-items-center px-4">
-  <div class="logo">Central Race</div>
-</header>
+<!-- MENU TOPO -->
+<nav class="navbar navbar-expand-lg">
+  <div class="container">
+    <a class="navbar-brand d-flex align-items-center" href="#">
+      <img src="https://imgur.com/0iskhD3.png">
+      Central Race
+    </a>
+
+    <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="menu">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="#">Início</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Preços</a></li>
+        <li class="nav-item"><a class="nav-link active" href="#">Funcionários</a></li>
+        <li class="nav-item">
+          <button class="btn btn-light btn-sm ms-3" onclick="toggleMenu()">Admin</button>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
 <main class="container my-5">
 
 <h2 class="text-center mb-4">Nossa Equipe</h2>
 
-<div class="subtitulo">RESPONSÁVEL MECÂNICA</div>
+<!-- RESPONSÁVEL MECÂNICO -->
+<div class="subtitulo">RESPONSÁVEL MECÂNICO</div>
 <div class="row justify-content-center mb-4">
   <div class="col-md-3">
     <div class="card card-employee">
       <img id="resp-mec-1" src="https://via.placeholder.com/400x250">
       <div class="card-body text-center">
         <h5>Vaga aberta</h5>
-        <p class="small text-muted">RESP. MECÂNICA</p>
+        <p class="small text-muted">Responsável Mecânico</p>
       </div>
     </div>
   </div>
 </div>
 
+<!-- LÍDER -->
 <div class="subtitulo">LÍDER</div>
 <div class="row justify-content-center mb-4">
   <div class="col-md-3">
@@ -103,12 +128,27 @@ body {
       <img id="lider-1" src="https://via.placeholder.com/400x250">
       <div class="card-body text-center">
         <h5>Vaga aberta</h5>
-        <p class="small text-muted">LÍDER</p>
+        <p class="small text-muted">Líder</p>
       </div>
     </div>
   </div>
 </div>
 
+<!-- SUB-LÍDER -->
+<div class="subtitulo">SUB-LÍDER</div>
+<div class="row justify-content-center mb-4">
+  <div class="col-md-3">
+    <div class="card card-employee">
+      <img id="sub-lider-1" src="https://via.placeholder.com/400x250">
+      <div class="card-body text-center">
+        <h5>Vaga aberta</h5>
+        <p class="small text-muted">Sub-Líder</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- GERENTE -->
 <div class="subtitulo">GERENTE</div>
 <div class="row justify-content-center mb-4">
   <div class="col-md-3">
@@ -116,18 +156,55 @@ body {
       <img id="gerente-1" src="https://via.placeholder.com/400x250">
       <div class="card-body text-center">
         <h5>Vaga aberta</h5>
-        <p class="small text-muted">GERENTE</p>
+        <p class="small text-muted">Gerente</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- SUP TURNAGEM -->
+<div class="subtitulo">SUP. TURNAGEM</div>
+<div class="row justify-content-center mb-4">
+  <div class="col-md-3">
+    <div class="card card-employee">
+      <img id="sup-turnagem-1" src="https://via.placeholder.com/400x250">
+      <div class="card-body text-center">
+        <h5>Vaga aberta</h5>
+        <p class="small text-muted">Supervisor de Turnagem</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- TURNAGEM -->
+<div class="subtitulo">TURNAGEM</div>
+<div class="row justify-content-center mb-4">
+  <div class="col-md-3">
+    <div class="card card-employee">
+      <img id="turnagem-1" src="https://via.placeholder.com/400x250">
+      <div class="card-body text-center">
+        <h5>Vaga aberta</h5>
+        <p class="small text-muted">Turnagem</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- REPARO -->
+<div class="subtitulo">REPARO</div>
+<div class="row justify-content-center mb-4">
+  <div class="col-md-3">
+    <div class="card card-employee">
+      <img id="reparo-1" src="https://via.placeholder.com/400x250">
+      <div class="card-body text-center">
+        <h5>Vaga aberta</h5>
+        <p class="small text-muted">Reparo</p>
       </div>
     </div>
   </div>
 </div>
 
 </main>
-
-<!-- BOTÃO ADMIN -->
-<button class="btn btn-dark admin-btn" onclick="toggleMenu()">
-  Admin
-</button>
 
 <!-- MENU ADMIN -->
 <div class="admin-menu" id="adminMenu">
@@ -136,9 +213,13 @@ body {
 
   <label>Cargo</label>
   <select id="cargo" class="form-select mb-2">
-    <option value="resp-mec-1">Responsável Mecânica</option>
+    <option value="resp-mec-1">Responsável Mecânico</option>
     <option value="lider-1">Líder</option>
+    <option value="sub-lider-1">Sub-Líder</option>
     <option value="gerente-1">Gerente</option>
+    <option value="sup-turnagem-1">Sup. Turnagem</option>
+    <option value="turnagem-1">Turnagem</option>
+    <option value="reparo-1">Reparo</option>
   </select>
 
   <label>Nome</label>
@@ -151,34 +232,26 @@ body {
   <button class="btn btn-danger w-100" onclick="limparPerfil()">Remover Perfil</button>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 <script>
 function toggleMenu() {
   document.getElementById("adminMenu").classList.toggle("open");
 }
 
 function salvarPerfil() {
-  const cargo = cargoEl.value;
-  const nome = nomeEl.value;
-  const foto = fotoEl.value;
-
   const dados = JSON.parse(localStorage.getItem("perfis") || "{}");
-  dados[cargo] = { nome, foto };
-
+  dados[cargo.value] = { nome: nome.value, foto: foto.value };
   localStorage.setItem("perfis", JSON.stringify(dados));
   location.reload();
 }
 
 function limparPerfil() {
-  const cargo = cargoEl.value;
   const dados = JSON.parse(localStorage.getItem("perfis") || "{}");
-  delete dados[cargo];
+  delete dados[cargo.value];
   localStorage.setItem("perfis", JSON.stringify(dados));
   location.reload();
 }
-
-const cargoEl = document.getElementById("cargo");
-const nomeEl = document.getElementById("nome");
-const fotoEl = document.getElementById("foto");
 
 const perfis = JSON.parse(localStorage.getItem("perfis") || "{}");
 
